# Gluboy

./: .gitignore  CMakeLists.txt  Gluboy.rc  Gluboy.sln  Gluboy.vcxproj  Gluboy.vcxproj.filters  README.md  Resource.h  audio.cpp  audio.h  cpu.cpp  cpu.h  glouboy.cpp  glouboy.h  imgui.ini  imgui_memory_editor.h  io.cpp  io.h  main.cpp  timer.cpp  timer.h  video.cpp  video.h
.github/workflows/: cmake.yml
GluBoy.xcodeproj/: project.pbxproj
GluBoy.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
buildem/: CMakeCache.txt  Gluboy.html  Gluboy.js  Gluboy.wasm  Makefile  Tetris.gb.h  bin2header  cmake_install.cmake  index.html
icon/: Gluboy.rc
libs/imgui/: imgui_impl_glfw.cpp
libs/nfd/: nfd_win.cpp
libs/nfd/lib/: nfd.lib
src/: audio.cpp  cpu.cpp  cpu.h  glouboy.cpp  glouboy.h  io.cpp  main.cpp  video.h
